--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  fluid_bottom_nav_bar: ^1.4.0
   flutter_bloc: ^8.1.2
   image_picker: ^0.8.6
   bloc: ^8.1.1
