--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   fluid_bottom_nav_bar: ^1.4.0
+  shared_preferences: ^2.1.0
   flutter_bloc: ^8.1.2
   image_picker: ^0.8.6
+  provider: ^6.0.5
   bloc: ^8.1.1
 
 dev_dependencies:
