--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   fluid_bottom_nav_bar: ^1.4.0
   shared_preferences: ^2.1.0
+  fluttertoast: ^8.2.1
   flutter_bloc: ^8.1.2
   image_picker: ^0.8.6
   provider: ^6.0.5
   bloc: ^8.1.1
+  dio: ^5.1.1
 
 dev_dependencies:
   flutter_test:
