--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_email_sender: ^5.2.0
   fluid_bottom_nav_bar: ^1.4.0
   shared_preferences: ^2.1.0
   fluttertoast: ^8.2.1
