--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:label="graduation_project_app"
+        android:label="SCI"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
