--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,9 @@ dependencies:
   fluttertoast: ^8.2.1
   flutter_bloc: ^8.1.2
   image_picker: ^0.8.6
+  file_picker: ^5.3.1
   provider: ^6.0.5
+  excel: ^2.1.0
   bloc: ^8.1.1
   dio: ^5.1.1
 
